--- a/src/index.css
+++ b/src/index.css
@@ -72,4 +72,11 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+ }
+ html, body {
+  overflow-x: hidden;   /* 🚫 stop horizontal scroll */
+  overflow-y: auto;     /* ✅ allow vertical scroll */
 }
+
+
